tests/ui/impl-trait/issues/issue-92305.stderr
error[E0107]: missing generics for struct `Vec`
  --> $DIR/issue-92305.rs:5:45
   |
LL | fn f<T>(data: &[T]) -> impl Iterator<Item = Vec> {
   |                                             ^^^ expected at least 1 generic argument
   |
help: add missing generic argument
   |
LL | fn f<T>(data: &[T]) -> impl Iterator<Item = Vec<T>> {
   |                                                +++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
